# schemlib

./: .coveragerc  LICENSE.md  README.md  pyproject.toml
schemlib/: blocks.py  entities.py  nbt.py  snbt.py
schemlib/schematic_formats/: __init__.py  abstract.py  intermediate.py  litematic.py  structure.py  version_mapping.py
schemlib/schematic_formats/building_gadgets/: __init__.py  building_gadgets_v0.py  building_gadgets_v1.py  building_gadgets_v2.py  common.py
schemlib/schematic_formats/sponge/: __init__.py  sponge_v1.py  sponge_v2.py
schemlib/schematic_formats/structurize/: __init__.py  blueprint.py
tests/: test_blocks.py  test_nbt.py  test_snbt.py
tests/schematic_tests/: test_abstract_schematic.py  test_known_schematics.py  test_version_mapping.py
tests/schematics/: example_bg0_modded_schematic.txt  example_bg0_schematic.txt  example_bg1_schematic.txt  example_bg1_schematic2.txt  example_bg1_schematic3.txt  example_bg2_schematic.txt  example_bg2_schematic2.txt  example_legacy_schematic.schematic  example_sponge_v2_schematic.schem  example_structure_schematic.nbt  example_structure_schematic2.nbt  one_stone_block.json  one_stone_block.litematic  one_stone_block.nbt  one_stone_block_bg0.txt  one_stone_block_bg1.txt  one_stone_block_bg2.txt  one_stone_block_v1.schem  one_stone_block_v2.schem  one_stone_block_v3.schem
